feat: workflow exceptions
